# smol-vlm-test

./: .gitignore  Cargo.toml  README.md
src/: main.rs  model.rs  text_model.rs  vision_model.rs
