[package]
name = "smol_vlm_test"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", version="0.8.4", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle", features = ["cuda"] }
candle-transformers = { version="0.8.4", features = ["cuda"] }
candle-flash-attn = { version = "0.8.4" }  # Must use same candle_core
hf-hub = "0.4.2"
tokenizers = { version="0.21.1", features = ["http"] }
rand = "0.9.0"
terminal_size = "0.4.2"
reqwest = { version = "0.12.15", features = ["blocking"] }
image = "0.25.6"
